--- a/app/views/placed_quantities/_form.html.erb
+++ b/app/views/placed_quantities/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: inspection_entry) do |form| %>
-  <% if inspection_entry.errors.any? %>
+<%= form_with(model: placed_quantity) do |form| %>
+  <% if placed_quantity.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(inspection_entry.errors.count, "error") %> prohibited this inspection_entry from being saved:</h2>
+      <h2><%= pluralize(placed_quantity.errors.count, "error") %> prohibited this placed_quantity from being saved:</h2>
 
       <ul>
-        <% inspection_entry.errors.each do |error| %>
+        <% placed_quantity.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
