--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -7,7 +7,7 @@
     <div class="header-actions">
       <%= link_to "Export to Excel", reports_path(request.query_parameters.merge(format: :csv)), class: "btn btn-secondary" %>
       <%= link_to "Create New Report", new_report_path, class: "btn btn-primary" %>
-      <%= link_to "Manage Bid Items", bid_items_path, class: "btn btn-secondary" %>
+      <%= link_to "Project Directory", projects_path, class: "btn btn-secondary" %>
     </div>
   </div>
 
