fixed view issues

--- a/app/views/bid_items/edit.html.erb
+++ b/app/views/bid_items/edit.html.erb
@@ -1,10 +1,11 @@
-<h1>Editing bid item</h1>
+<h1>Editing <%= @bid_item.code %></h1>
 
 <%= render "form", bid_item: @bid_item %>
 
 <br>
 
 <div>
-  <%= link_to "Show this bid item", @bid_item %> |
-  <%= link_to "Back to bid items", bid_items_path %>
+  <%# FIX: Ensure links know about the @project %>
+  <%= link_to "Show this item", project_bid_item_path(@project, @bid_item) %> |
+  <%= link_to "Back to Library", project_bid_items_path(@project) %>
 </div>
