--- a/app/views/bid_items/index.html.erb
+++ b/app/views/bid_items/index.html.erb
@@ -2,10 +2,19 @@
   
   <div class="dashboard-header">
     <div>
-      <%# 1. Project-Aware Title %>
+      <%# 1. Project Context %>
       <h1>Library: <%= @project.name %></h1>
       <p style="color: #666; margin: 0;">Contract: <%= @project.contract_number %></p>
     </div>
+    
+    <div style="display: flex; gap: 10px;">
+      <%# 2. Project-Aware New Button %>
+      <%= link_to "+ New Item", new_project_bid_item_path(@project), class: "btn btn-primary" %>
+      
+      <%# 3. Improved Back Button (Goes to Project Details, not Global List) %>
+      <%= link_to "Back to Project", project_path(@project), class: "btn btn-secondary" %>
+    </div>
+  </div>
     
     <div>
       <%# 2. Project-Aware New Button %>
