--- a/app/views/bid_items/show.html.erb
+++ b/app/views/bid_items/show.html.erb
@@ -1,10 +1,21 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @bid_item %>
+<div class="form-card">
+  <h2>Item Details: <%= @bid_item.code %></h2>
+  <%= render @bid_item %>
+  
+  <% if @bid_item.spec_item %>
+    <p><strong>Linked Spec:</strong> <%= @bid_item.spec_item.code %> - <%= @bid_item.spec_item.description %></p>
+  <% end %>
+</div>
 
-<div>
-  <%= link_to "Edit this bid item", edit_bid_item_path(@bid_item) %> |
-  <%= link_to "Back to bid items", bid_items_path %>
+<div style="margin-top: 20px;">
+  <%# FIX: Nested path helpers %>
+  <%= link_to "Edit this item", edit_project_bid_item_path(@project, @bid_item), class: "btn btn-primary" %> 
+  <%= link_to "Back to Library", project_bid_items_path(@project), class: "btn btn-secondary" %>
 
-  <%= button_to "Destroy this bid item", @bid_item, method: :delete %>
+  <div style="margin-top: 20px; border-top: 1px solid #eee; padding-top: 20px;">
+     <%# FIX: Delete button needs the array [@project, @bid_item] to generate the correct URL %>
+     <%= button_to "Destroy this item", [@project, @bid_item], method: :delete, class: "btn btn-danger", form: { style: "display:inline-block;" } %>
+  </div>
 </div>
